2011-04-23  Ken Brown  <kbrown@cornell.edu>

	* Version 0.1 released.

2011-04-23  Ken Brown  <kbrown@cornell.edu>

	* README: New file.
	* INSTALL: Ditto.
	* main.cc (main): Tweak output.
	* main+.cc (main): Ditto.
	* TODO: Update

2011-04-22  Ken Brown  <kbrown@cornell.edu>

	* TODO: Update.
	* main.cc (main): Fix test for whether to print table.
	* main+.cc (main): Ditto.

2011-04-22  Ken Brown  <kbrown@cornell.edu>

	* coset.cc: Tweak license info.
	* coset.h: Ditto.
	* cosettable.cc: Ditto.
	* cosettable.h: Ditto.
	* gens_and_words.cc: Ditto.
	* gens_and_words.h: Ditto.
	* main.cc (main): Tweak copyright and license info.  Remove
	lookahead option and put it in...
	* main+.cc: New file.
	* Makefile.cygwin: Make both tc and tc+ (for HLT plus lookahead).
	Add copyright and license info.
	* Makefile.linux: Ditto.
	* examples/M12.in: New file.
	* TODO: Update and add copyright and license.

2011-04-21  Ken Brown  <kbrown@cornell.edu>

	* main.cc (getgroup): Prompt for number of generators.
	(main): Only print coset table if it's small.  Fix output.
	* gens_and_words.h: Remove gen_to_char.  Remove global constant
	NGENS.  Accommodate throughout.
	* gens_and_words.cc: Remove gen_to_char.  Allow arbitrary number
	of generators.
	* cosettable.h (CosetTable): New member NGENS.
	* cosettable.cc (CosetTable): Adapt constructor to changes to
	Coset and CosetTable.
	(print): Allow arbitrary number of generators.
	(debug_print): Ditto.
	* coset.h (Coset): New member NGENS.  Change 'row' from array to
	vector.
	* coset.cc (Coset): Adapt constructor to changes.

2011-04-20  Ken Brown  <kbrown@cornell.edu>

	* cosettable.h (CosetTable): Rearrange members.
	* TODO: New file.

2011-04-20  Ken Brown  <kbrown@cornell.edu>

	* COPYING: New file.
	* coset.cc: Add copyright and licensing information.
	* coset.h: Ditto.
	* cosettable.cc: Ditto.
	* cosettable.h: Ditto.
	* gens_and_words.cc: Ditto.
	* gens_and_words.h: Ditto.
	* main.cc: Ditto.
