@@ -1,4 +1,5 @@
 *.exe
 *.stackdump
 Makefile
-/bin
+bin/
+admin/
