@@ -4,15 +4,11 @@ Copyright 2011 Kenneth S. Brown.
 See the end of the file for license conditions.
 
 
-* Documentation
-
-* Rewrite handout (which can be mentioned in documentation).
-
 * Rewrite the beamer version.
 
-* Announce to group pub.
-
 * Allow user to specify an output file for the coset table.
+
+* See if there are obvious places to speed up the code.  Profile?
 
 
 This file is part of Toddcox.
@@ -29,6 +25,7 @@ for more details.
 
 You should have received a copy of the GNU General Public License
 along with Toddcox.  If not, see <http://www.gnu.org/licenses/>.
+
 
 Local variables:
 mode: outline
